[package]
name = "amethyst"
version = "0.5.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Data-oriented game engine written in Rust"
keywords = ["game", "engine", "sdk", "amethyst"]
categories = ["game-engines"]

documentation = "https://www.amethyst.rs/doc/master/amethyst"
homepage = "https://www.amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

readme = "README.md"
license = "MIT OR Apache-2.0"

[badges]
appveyor = { repository = "amethyst/amethyst", branch = "develop" }
travis-ci = { repository = "amethyst/amethyst" }

[features]
profiler = ["thread_profiler/thread_profiler"]

[dependencies]
amethyst_config = { path = "amethyst_config/", version = "0.2" }
amethyst_renderer = { path = "amethyst_renderer/", version = "0.5" }
cgmath = "0.13"
dds-rs = "0.4"
derivative = "1.0"
fnv = "1.0"
num_cpus = "1.2"
genmesh = "0.4"
glutin = "0.8"
imagefmt = "4.0"
rayon = "0.7"
# specs = "0.8"
specs = { version = "0.8", git = "https://github.com/slide-rs/specs" }
thread_profiler = { version = "0.1", optional = true }
ticketed_lock = "0.1"
wavefront_obj = "5.0"
winit = "0.6"

[[example]]
name = "hello_world"
path = "examples/00_hello_world/main.rs"

[[example]]
name = "window"
path = "examples/01_window/main.rs"

[[example]]
name = "sphere"
path = "examples/02_sphere/main.rs"

[[example]]
name = "renderable"
path = "examples/03_renderable/main.rs"

[[example]]
name = "pong"
path = "examples/04_pong/main.rs"

[[example]]
name = "assets"
path = "examples/05_assets/main.rs"

[workspace]
members = ["amethyst_config", "amethyst_renderer"]
