[package]
name = "amethyst_engine"
version = "0.3.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Core engine library"
keywords = ["game", "engine", "core", "amethyst"]

documentation = "https://www.amethyst.rs/doc/amethyst/"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

license = "MIT"

[lib]
name = "amethyst_engine"
path = "src/lib.rs"

[features]
input = []

[dependencies]
time = "0.1"
walkdir = "0.1"
yaml-rust = "0.3"
